<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/text_home" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/text_my_cart" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_order"
            android:title="@string/text_my_orders" />
        <item
            android:id="@+id/nav_my_message"
            android:icon="@drawable/ic_alarm"
            android:title="@string/text_my_message" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_about"
            android:title="@string/text_support" />
    </group>

    <item android:title="@string/text_account">
        <menu>
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/ic_password"
                android:title="@string/action_change_password" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login_right"
                android:title="@string/action_login" />
        </menu>
    </item>

</menu>
