<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#efefef"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/order_item_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/order_item_header_bg"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvOrderNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_order_no"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/text_date_time"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-2px"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_title"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="100dp"
                    android:text="@string/text_amount" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/order_status_bg"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:padding="6dp"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:text="@string/text_status" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
